--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -206,9 +206,9 @@ $icon-font-path: "../fonts/";
 				text-align: justify;
 				padding: 20px 0;
 }
-#providers,
-#doctors,
-#procedures,
+#prov,
+#doct,
+#proc,
 #speciality,
 #reviews {
 				border-top: 1px solid #ededed;
