--- a/Gmt/templates/views/packages.hbs
+++ b/Gmt/templates/views/packages.hbs
@@ -10,10 +10,15 @@
 </div>
 
 <div class="row procedure">
-	<div class="col-lg-8 border no-padding">
+	<div class="col-lg-8 border no-padding ">
+		<div class="row">
+			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div>
+				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 ">
 		<div class="row ">
+
 			{{#each packages}}
-				<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5 ">
+				<!-- <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div> -->
+				<div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 ">
 					<div class="thumbnail">
 						<div class="image " style="position: relative; width:100%">
 							<img src="/images/Panchakarma 1.jpg" style="display:block;margin-left:auto;margin-right:auto;width:100%;">
@@ -21,17 +26,21 @@
 						</div>
 						<div class="caption">
 							<p style="font-family:SourceSansPro-Regular;color:rgb(53,53,53);text-align:justify;padding-left:7px;padding-right:7px;padding-top:5px;">Alternative medical practices are generally not recognized by the medical community as standard or conventional medical approaches. Alternative medicine includes dietary supplements, megadose vitamins, herbal preparations</p>
-							<p><a href="#" class="btn btn-default" role="button" style="box-shadow: 0 3px 0 0 #b24b4d;background-color: #ff6c6f;border-color: rgb(255,108,111);margin-left:8px;color:white;font-family:SourceSansPro-Regular;margin-top:10px;">Know more</a></p>
+							<p><a href="#" class="btn btn-default" role="button" style="box-shadow: 0 3px 0 0 #b24b4d;background-color: #ff6c6f;border-color: rgb(255,108,111);margin-left:8px;color:white;font-family:SourceSansPro-Regular;margin-top:10px;" onclick="">Know more</a></p>
 						</div>
 
 					</div>
 				</div>
+				<!-- <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div> -->
 			{{/each}}
 		</div>
+		</div>
+		<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div>
+	</div>
 	</div>
 
 	<div class="col-lg-4 no-padding">
-		<h4 class="specialities" style="background-color:#C6C6C6;color:white">Packages</h4>
+		<h4 class="specialities" style="background-color:#C6C6C6;color:white;margin-bottom:0px;">Packages</h4>
 		<ul class="nav nav-stacked tabs">
 			{{#each packageCategory1}}
 				{{#if active}}
@@ -69,7 +78,7 @@
 				{{/if}}
 			{{/each}}
 
-			<h4 class="specialities" style="background-color:#C6C6C6;color:white">Checkups</h4>
+			<h4 class="specialities" style="background-color:#C6C6C6;color:white;margin-bottom:0px;">Checkups</h4>
 			{{#each packageCategory2}}
 				{{#if active}}
 					<li role="presentation" class="active" style="margin-top: 0px;">
