--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -5068,10 +5068,10 @@ button.close {
   text-align: justify;
   padding: 20px 0; }
 
-#providers, #doctors, #procedures, #speciality, #reviews {
+#prov, #doct, #proc, #speciality, #reviews {
   border-top: 1px solid #ededed;
   padding-top: 10px; }
-  #providers span, #doctors span, #procedures span, #speciality span, #reviews span {
+  #prov span, #doct span, #proc span, #speciality span, #reviews span {
     position: relative;
     top: 10px;
     font-family: SourceSansPro-Semibold;
