--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -55,13 +55,14 @@
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 					</div>
 				</div>
-
+				
 				<div class="item">
 					<img src="../images/GMTHomeC4.jpg" style="width:100%;height:auto;">
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
-						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Combine your holiday with a health check up</h2>
-						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Customize your package </h2>
-						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the world of ayurveda </h2>
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Treat your health with a vacation</h2>
+						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Preventive care programs</h2>
+			     	<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
+						<p style="text-align:center;padding-right:30px;font-size:18px;font-family:SourceSansPro-Regular;position:relative;top:-35px;">learn more...</p>
 					</div>
 				</div>
 			</div>
@@ -257,7 +258,7 @@
 						</div>
 					</div>
 					<div class="row" style="text-align:center;">
-						<a href="/services" style="font-family:SourceSansPro-Regular;font-size:16px;">
+						<a href="/services" style="font-family:SourceSansPro-Regular;font-size:16px;text-decoration:none;">
 							Learn More...
 							<!-- <input type="submit" value="Learn More" style="font-family:SourceSansPro-Regular;font-size:16px;"> -->
 						</a>
