--- a/Gmt/templates/views/partials/header.hbs
+++ b/Gmt/templates/views/partials/header.hbs
@@ -46,9 +46,14 @@
 												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgb(53,53,53);">{{ label }}</a>
 											</li>
 											{{/each}}
-											<li style="padding-left:35px;">
-												<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button>
-											</li>
+											<li style="padding-left:35px;color:#dd7e80;padding-top: 10px;color">
+													<i class="fa fa-envelope-o fa-2x"></i>
+												<i class="fa fa-skype fa-2x" style="padding-left: 10px; padding-right: 10px; "></i>
+												<i class="fa fa-whatsapp fa-2x" ></i>
+	</li>
+												<!-- <i class="fa fa-envelope fa-2x" style=""></i> -->
+												<!-- <button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button> -->
+
 											<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
 								</div>
