--- a/Gmt/templates/views/partials/headerhome.hbs
+++ b/Gmt/templates/views/partials/headerhome.hbs
@@ -44,9 +44,14 @@
 											<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgba(0,0,0,0);">{{ label }}</a>
 										</li>
 										{{/each}}
-										<li style="padding-left:35px;">
+										<!-- <li style="padding-left:35px;">
 											<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);border:2px solid white;color:white;font-family:SourceSansPro-Regular;font-size:16.5px;">Connect</button>
-										</li>
+										</li> -->
+										<li style="padding-left:35px;color:rgb(220,220,220);padding-top: 10px;color">
+												<i class="fa fa-envelope-o fa-2x"></i>
+											<i class="fa fa-skype fa-2x" style="padding-left: 10px; padding-right: 10px; "></i>
+											<i class="fa fa-whatsapp fa-2x" ></i>
+</li>
 										<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
 								</div>
