--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -123,7 +123,7 @@
 					</div>
 				</div>
 				<div class="section fp-auto-height ">
-					<h4 id="proc">
+					<h4 id="proce">
 						<div class="row">
 							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 							</div>
