--- a/Gmt/templates/views/package.hbs
+++ b/Gmt/templates/views/package.hbs
@@ -14,9 +14,15 @@
 		<div class="row">
 			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div>
 			<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 ">
+				<div class="row">
+				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 ">
 				<h3 style="font-family:SourceSansPro-Semibold">Rejuvination Package</h3>
-
-				<button type="submit" class="" style="position:relative;top:-45px;float:right;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Enquire</button>
+			</div>
+			<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
+				<button type="submit" class="" style="margin-top:10px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Enquire</button>
+       </div>
+		 </div>
+				<!-- <button type="submit" class="" style="position:relative;top:-45px;float:right;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Enquire</button> -->
 				<p style="padding-top: 15px; padding-bottom: 15px;">Alternative medical practices are generally not recognized by the medical community as standard or conventional medical approaches. Alternative medicine includes dietary supplements, megadose vitamins, herbal preparations</p>
 
 				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -27,7 +33,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											Who should follow this?
+											<span style="color:black">Who should follow this?</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -51,7 +57,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											Inclusions
+											<span style="color:black">	Inclusions</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -86,7 +92,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											Tariffs
+												<span style="color:black">Tariffs</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -125,7 +131,7 @@
 									<h4 class="panel-title">
 										<div class="row">
 											<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-												Other Services
+													<span style="color:black">Other Services</span>
 											</div>
 											<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 												<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
