--- a/Gmt/templates/views/packages.hbs
+++ b/Gmt/templates/views/packages.hbs
@@ -1,10 +1,14 @@
 {{>header}}
 <div class="packagePic marginAlign ">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
+	<div class="row" style="padding-top:205px;">
+		<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
+			<div class="row">
+				<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+				</div>
+				<div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:15px;">
+					<span style="font-size:30px;font-family:SourceSansPro-Semibold;color:white">{{{packageCate}}}</span>
+				</div>
 			</div>
-			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
 		</div>
 	</div>
 </div>
