--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -43,7 +43,14 @@
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
-						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
+						<div class="row">
+							<div class="col-lg-8">
+								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
+							</div>
+							<div class="col-lg-4 no-padding" style="right:15px;">
+								<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -52,17 +59,31 @@
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Experience the power of inner healing</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Choose the ideal location</h2>
+						<div class="row">
+							<div class="col-lg-7">
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 					</div>
+					<div class="col-lg-4 " style="padding-left:35px;">
+						<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
+					</div>
 				</div>
-				
+					</div>
+				</div>
+
 				<div class="item">
 					<img src="../images/GMTHomeC4.jpg" style="width:100%;height:auto;">
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Treat your health with a vacation</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Preventive care programs</h2>
+						<div class="row">
+							<div class="col-lg-6">
 			     	<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
-						<p style="text-align:center;padding-right:30px;font-size:18px;font-family:SourceSansPro-Regular;position:relative;top:-35px;">learn more...</p>
+					</div>
+					<div class="col-lg-4 " style="padding-left:35px;">
+						<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
+					</div>
+				</div>
+						<!-- <p style="text-align:center;padding-right:30px;font-size:18px;font-family:SourceSansPro-Regular;position:relative;top:-35px;">learn more...</p> -->
 					</div>
 				</div>
 			</div>
@@ -178,15 +199,15 @@
 		<h1 style="position:absolute;top:1050px;left:610px;color:white;text-align:center;font-family:SourceSansPro-Semibold;">GOA</h1>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
-			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" >
+			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row" style="position:absolute;">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 200px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-left: 200px;">
 						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Eat </span>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 180px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-left: 180px;">
 						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Pray </span>
 					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"style="padding-left: 900px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-left: 900px;">
 						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Heal </span>
 					</div>
 				</div>
