--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -24,7 +24,7 @@
 				<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 provider-info">
 
 					<h3 style="">{{name}}</h3>
-					<input id="input-id" type="number" class="rating" min=1 max=10 step=2 data-size="xs" data-rtl="false" data-readonly="true" showCaption="false">
+					<input id="input-id" type="number" class="rating" min=1 max=10 step=2 data-size="xs" data-rtl="false" data-readonly="false" showCaption="false">
 
 					{{{summary}}}
 					<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'" style="outline:none;">Know More</button>
