--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -16,39 +16,17 @@
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
-				<!-- <div class="carousel-caption " style="top:2%; left:0%;right: 0%;text-align:left;">
-					<div class="row">
-
-						<div class="col-lg-4">
-							<div class="row">
-								<div class="col-lg-1"></div>
-								<div class="col-lg-11" style="">
-									<img alt="Goa Medical Travel" src="/images/gmtwhite.png" style="width:149px;height:72px;">
-								</div>
-
-
-							</div>
-						</div>
-						<div class="col-lg-8"></div>
-
-					</div>
-				</div> -->
-				<!-- <h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
-					<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
-					<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2> -->
-
-
 				<div class="item active ">
 					<img src="../images/GMTHomeCMain.jpg" style="width:100%;height:auto">
 					<div class="carousel-caption" style="left: 72px;top:310px; text-align: left;">
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
 						<div class="row">
-							<div class="col-lg-8">
+							<div class="col-lg-6">
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
 							</div>
-							<div class="col-lg-4 no-padding" style="right:15px;">
-								<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
+							<div class="col-lg-4" style="padding-left:35px;">
+								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
 							</div>
 						</div>
 					</div>
@@ -60,13 +38,13 @@
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Experience the power of inner healing</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Choose the ideal location</h2>
 						<div class="row">
-							<div class="col-lg-7">
-						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
-					</div>
-					<div class="col-lg-4 " style="padding-left:35px;">
-						<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
-					</div>
-				</div>
+							<div class="col-lg-6">
+								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
+							</div>
+							<div class="col-lg-4 no-padding" style="right:15px;">
+							<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -76,14 +54,13 @@
 						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">Treat your health with a vacation</h2>
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Preventive care programs</h2>
 						<div class="row">
-							<div class="col-lg-6">
+							<div class="col-lg-5">
 			     	<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
 					</div>
-					<div class="col-lg-4 " style="padding-left:35px;">
-						<p style="font-size:18px;font-family:SourceSansPro-Regular;">learn more...</p>
+					<div class="col-lg-4 no-padding">
+					<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
 					</div>
 				</div>
-						<!-- <p style="text-align:center;padding-right:30px;font-size:18px;font-family:SourceSansPro-Regular;position:relative;top:-35px;">learn more...</p> -->
 					</div>
 				</div>
 			</div>
