--- a/Gmt/templates/views/package poo.hbs
+++ b/Gmt/templates/views/package poo.hbs
@@ -11,47 +11,51 @@
 
 <div class="row procedure">
 	<div class="col-lg-8 border no-padding ">
-		<div class="row">
+		<div class="row" style="padding:30px;">
+			{{package.name}}
+		</div>
+		<div class="row" style="padding:30px;">
+			{{{package.discription}}}
+		</div>
+
+
+
+		<div class="row" style="padding:30px;">
+
+			{{#each packageSection}}
+				<div class="row" style="padding:30px;">
+					{{name}}
+				</div>
+				<div class="row" style="padding:30px;">
+					{{{discription}}}
+				</div>
+			{{/each}}
+		</div>
+
+		<div class="row" style="padding:30px;">
+
+			{{#each packageTariff}}
+				<div class="row" style="padding:30px;">
+					{{parameter1}} --> {{parameter2}} --> {{price}}
+				</div>
+
+			{{/each}}
+		</div>
+
+		<!-- <div class="row">
 			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div>
-			<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 package_para">
+			<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 ">
 				<div class="row">
 				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 ">
-				<h3 style="font-family:SourceSansPro-Semibold">	{{package.name}}</h3>
+				<h3 style="font-family:SourceSansPro-Semibold">Rejuvination Package</h3>
 			</div>
 			<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
-				<button type="submit" class="" style="margin-top:12px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Enquire</button>
+				<button type="submit" class="" style="margin-top:10px;color:#456C39;border: 2px solid #456C39;border-radius:4px;padding: 5px 20px;font-family:SourceSansPro-Regular;font-size:16.5px;" data-toggle="modal" data-target="#myModal">Enquire</button>
        </div>
 		 </div>
-			{{{package.discription}}}
-			 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-				 	{{#each packageSection}}
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingOne" style="border-radius:4px;">
+				<p style="padding-top: 15px; padding-bottom: 15px;">Alternative medical practices are generally not recognized by the medical community as standard or conventional medical approaches. Alternative medicine includes dietary supplements, megadose vitamins, herbal preparations</p>
 
-						<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="true" aria-controls="collapseOne" style="outline:none">
-							<h4 class="panel-title">
-								<div class="row">
-									<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-										<span style="color:black;font-size:16px;font-family:SourceSansPro-Regular;">	{{name}}</span>
-									</div>
-									<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
-										<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
-									</div>
-								</div>
-							</h4>
-						</a>
-
-					</div>
-					<div id="{{key}}" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-						<div class="panel-body">
-								{{{discription}}}
-						</div>
-					</div>
-				</div>
-				{{/each}}
-			</div>
-
-				<!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+				<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 					<div class="panel panel-default">
 						<div class="panel-heading" role="tab" id="headingOne" style="border-radius:4px;">
 
@@ -59,7 +63,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											<span style="color:black;font-size:16px;font-family:SourceSansPro-Regular;">Who should follow this?</span>
+											<span style="color:black">Who should follow this?</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -83,7 +87,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-										<span style="color:black;font-size:16px;font-family:SourceSansPro-Regular;">Inclusions</span>
+											<span style="color:black">	Inclusions</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -118,7 +122,7 @@
 								<h4 class="panel-title">
 									<div class="row">
 										<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-											<span style="color:black;font-size:16px;font-family:SourceSansPro-Regular;">Tariffs</span>
+												<span style="color:black">Tariffs</span>
 										</div>
 										<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 											<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -130,11 +134,11 @@
 						</div>
 						<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 							<div class="panel-body">
-								<table  style="width:100%;">
-									<tr >
-										<th>Days</th>
-										<th>Single</th>
-										<th>Couple</th>
+								<table border="1" style="width:100%">
+									<tr>
+										<td>Days</td>
+										<td>Single</td>
+										<td>Couple</td>
 									</tr>
 
 									<tr>
@@ -157,7 +161,7 @@
 									<h4 class="panel-title">
 										<div class="row">
 											<div class="col-lg-11 col-md-11 col-sm-11 c0l-xs-11">
-												<span style="color:black;font-size:16px;font-family:SourceSansPro-Regular;">Other Services</span>
+													<span style="color:black">Other Services</span>
 											</div>
 											<div class="col-lg-1 col-md-1 col-sm-1 c0l-xs-1">
 												<span class="glyphicon glyphicon-chevron-down" style="color: #d6d2d2;"></span>
@@ -187,14 +191,14 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 			</div>
 			<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 "></div>
-		</div>
+		</div> -->
 	</div>
 
 	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 		<div class="modal-dialog" role="document" style="width:20%;top:80px">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -229,7 +233,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<div class="col-lg-4 no-padding">
